worked on header, updated secondary pages

--- a/index.html
+++ b/index.html
@@ -9,36 +9,38 @@
     <title>Adagio - Music for Kids</title>
   </head>
   <body>
-    <header class="jumbotron">
-      <div>
-        <h3>Adagio - Music for Kids</h3><!--Change to name of business-->
-      </div>
-      <div>
-        <ul class="nav nav-pills"><!-- Sticky header -->
-          <li><a href="views/home.html">About Us</a></li><!--Link to lower down this page-->
-          <li><a href="views/classes.html">Classes</a></li><!-- Link to other pages -->
-          <li><a href="views/prospective.html">Prospective Families</a></li>
-          <li><a href="views/current.html">Current Families</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-              Contact us <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Call us</a></li>
-              <li><a href="#">Email us</a></li>
-            </ul>
-            </li><!--Drop down menu -->
+    <header>
+    <nav class="navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Adagio</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="active"><a href="views/home.html">About Us</a></li><!--Link to lower down this page-->
+      <li><a href="views/classes.html">Classes</a></li><!-- Link to other pages -->
+      <li><a href="views/prospective.html">Prospective Families</a></li>
+      <li><a href="views/current.html">Current Families</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Call Us</a></li>
+          <li><a href="#">Email Us</a></li>
         </ul>
-      </div>
-    </header>
+      </li>
+    </ul>
+  </div>
+</nav>
+</header>
     <main>
+
     </main>
     <footer>
       <div>
         Copyright, legal stuff
       </div>
       <div>
-        <a href="">Link to Facebook</a>
+        <a href=" https://www.facebook.com/StapletonKidsMusic/">Link to Facebook</a>
       </div>
     </footer>
   </body>
