hide show function added

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
   <body>
     <header>
     <nav class="navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Adagio</a>
-    </div>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="views/home.html">About Us</a></li><!--Link to lower down this page-->
-      <li><a href="views/classes.html">Classes</a></li><!-- Link to other pages -->
-      <li><a href="views/prospective.html">Prospective Families</a></li>
-      <li><a href="views/current.html">Current Families</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Call Us</a></li>
-          <li><a href="#">Email Us</a></li>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Adagio</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="views/home.html">About Us</a></li><!--Link to lower down this page-->
+          <li><a href="views/classes.html">Classes</a></li><!-- Link to other pages -->
+          <li><a href="views/prospective.html">Prospective Families</a></li>
+          <li><a href="views/current.html">Current Families</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
+            <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Call Us</a></li>
+              <li><a href="#">Email Us</a></li>
+            </ul>
+          </li>
         </ul>
-      </li>
-    </ul>
-  </div>
-</nav>
-</header>
+        </div>
+      </nav>
+      </header>
     <main>
 
     </main>
@@ -43,5 +43,9 @@
         <a href=" https://www.facebook.com/StapletonKidsMusic/">Link to Facebook</a>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
   </body>
 </html>
