--- a/index.html
+++ b/index.html
@@ -2,24 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js"
+    integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8"
+    crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
+    integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7"
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"
+    integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK"
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+
+
     <link rel="stylesheet" type="text/css"
       href="https://necolas.github.io/normalize.css/latest/normalize.css">
     <link rel="stylesheet" type="text/css" href="https://bootswatch.com/united/bootstrap.css">
     <link rel="stylesheet" href="main.css">
-    <title>Adagio - Music for Kids</title>
+    <title>Stapleton Kids Music</title>
   </head>
   <body>
     <header>
-    <nav class="navbar-default navbar-fixed-top">
+    <nav class="navbar-inverse navbar-top">
+    <style>
+        .carousel-inner>.item>img,
+        .carousel-inner>.item>a>img {
+            width: 70%;
+            margin: auto;
+        }
+    </style>
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Adagio</a>
+          <a class="navbar-brand" href="#">Stapleton Kids Music</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="views/home.html">About Us</a></li><!--Link to lower down this page-->
           <li><a href="views/classes.html">Classes</a></li><!-- Link to other pages -->
-          <li><a href="views/prospective.html">Prospective Families</a></li>
-          <li><a href="views/current.html">Current Families</a></li>
+          <li><a href="views/tuition.html">Tuition</a></li>
+          <li><a href="views/current.html">Parent Portal</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us
             <span class="caret"></span></a>
@@ -32,9 +56,46 @@
         </div>
       </nav>
       </header>
+
     <main>
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                  <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" class="image-size" alt="Tuition" />
+                  <div class="carousel-caption">
+                      <h3>$150 for 10 lessons</h3>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" class="image-size" alt="Schedule">
+                  <div class="carousel-caption">
+                      <h3>Schedule</h3>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" class="image-size" alt="About">
+                  <div class="carousel-caption">
+                      <h3>About</h3>
+                  </div>
+              </div>
+          </div>
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <span class="icon-prev" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <span class="icon-next" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
 
     </main>
+
     <footer>
       <div>
         Copyright, legal stuff
@@ -43,9 +104,5 @@
         <a href=" https://www.facebook.com/StapletonKidsMusic/">Link to Facebook</a>
       </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
   </body>
 </html>
